# CFDeskit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  abi_check.hpp
apps/alarm_clock/: main.cpp
apps/calculator/: CMakeLists.txt  main.cpp
apps/calendar/: main.cpp
apps/noter/: main.cpp
apps/system_state/: CMakeLists.txt  README.md  main.cpp
apps/system_state/vendored-cfbase/: CMakeLists.txt
test/: CMakeLists.txt
test/calculator/: CMakeLists.txt
